--- a/package.json
+++ b/package.json
@@ -13,5 +13,14 @@
     "express": "^4.14.0",
     "mongodb": "^2.2.11",
     "response-time": "^2.3.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fermh2010/fcc-image-search.git"
+  },
+  "bugs": {
+    "url": "https://github.com/fermh2010/fcc-image-search/issues"
+  },
+  "homepage": "https://github.com/fermh2010/fcc-image-search#readme"
 }
