--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.4.6",
+    "co": "^4.6.0",
     "concat-stream": "^1.5.2",
     "express": "^4.14.0",
     "mongodb": "^2.2.11",
